2000-04-18  Danilo Almeida  <dalmeida@mit.edu>

	* prompter.c (krb5int_set_prompt_types): Set to actual value
	intead of 0.

2000-04-04  Ken Raeburn  <raeburn@mit.edu>

	* locate_kdc.c (maybe_use_dns): Renamed from _krb5_use_dns.  Now
	takes an arg to indicate a key to look up in krb5.conf, falling
	back to "dns_fallback", and an arg indicating the default value if
	no config file entries match.
	(_krb5_use_dns_realm): New routine; use "dns_lookup_realm" and
	KRB5_DNS_LOOKUP_REALM setting.
	(_krb5_use_dns_kdc): New routine; use "dns_lookup_kdc" and
	KRB5_DNS_LOOKUP_KDC.
	(krb5_locate_kdc): Call _krb5_use_dns_kdc.
	* changepw.c (krb5_locate_kpasswd): Call _krb5_use_dns_kdc.
	* def_realm.c (krb5_get_default_realm): Call _krb5_use_dns_realm.
	* hst_realm.c (krb5_get_host_realm): Call _krb5_use_dns_realm.

2000-03-15  Danilo Almeida  <dalmeida@mit.edu>

	* prompter.c: Add krb5int_set_prompt_types() and
	krb5_get_prompt_types().

2000-03-14  Ken Raeburn  <raeburn@mit.edu>

	* init_os_ctx.c (os_get_default_config_files): Remove unused
	variable.

	* def_realm.c: Include netinet/in.h if available.

2000-02-25  Ken Raeburn  <raeburn@mit.edu>

	* localaddr.c (foreach_localaddr): Broken out from old
	krb5_os_localaddr.  Iterates over all active interface addresses,
	invoking callback functions; knows nothing about Kerberos.
	(count_addrs, allocate, add_addr): New callback functions.
	(krb5_os_localaddr): Use the above.
	(allocate): Make room for NULL value at the end.

2000-02-16  Ken Raeburn  <raeburn@mit.edu>

	* localaddr.c (krb5_os_localaddr): Dynamically grow buffer used
	for SIOCGIFCONF until it appears to have been big enough.
	Dynamically grow internal address pointer array as needed.

2000-02-11  Marshall Vale  <mjv@mit.edu>

	* init_os_ctx.c (os_get_default_config_files.c): Added new
	file name "Kerberos Preferences" to the of valid configuration
	file names on Mac OS. The others will be removed at a later 
	date.

2000-02-08  Marshall Vale  <mjv@mit.edu>
